made changes in styling

--- a/contact.html
+++ b/contact.html
@@ -10,20 +10,18 @@
 <body>
 <!--Navigation bar in header-->  
 <div class="page_header">
-    <div class="header_div1"><br></div>
-    <div class="header_div2">
-        <h3>Sapna Sood</h3>
-    </div>
-    <div class="header_div3">
-<nav>
-    <a class="style_a" href="./index.html">About</a> |
-    <a class="style_a" href="./galary.html">Portfolio</a> |
-    <a class="style_a" href="./contact.html">Contact</a> |
 
-</nav>
-</div>
-
-</div>
+ <span>
+     
+     <a class="style_a" href="./contact.html">Contact</a> 
+     <a class="style_a" href="./galary.html">Portfolio|</a> 
+     <a class="style_a" href="./index.html">About|</a> 
+     <a class="style_a1 style_a" href="./index.html">Sapna</a> 
+  
+ </span>
+ 
+ 
+ </div>
 
 <div class="form_div">
  <h4>Contact</h4>
